--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,6 +1,6 @@
 <div class="menu-bar__container">
   <div class="menu-bar__logo">
-    <img src="" alt="" srcset="" />
+    <img src="assets/ps-logo.png" alt="Psn" width="140px" height="32px" />
   </div>
   <div class="menu-bar__item">
     <ul>
