--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,26 @@
 <div class="home__container">
-  <app-card></app-card>
+  <app-card
+    gameCover="assets/bt-1.jpg"
+    gameLabel="Exclusive"
+    gameType="DIGITAL | PS4"
+    gamePrice="R$ 129,99"
+  ></app-card>
+  <app-card
+    gameCover="assets/bt-4.jpg"
+    gameLabel="Digital"
+    gameType="DIGITAL | PS5"
+    gamePrice="R$ 269,99"
+  ></app-card>
+  <app-card
+    gameCover="assets/ac-cover.jpg"
+    gameLabel="Digital"
+    gameType="DIGITAL | PS5"
+    gamePrice="R$ 210,99"
+  ></app-card>
+  <app-card
+    gameCover="assets/bt-hardline.jpg"
+    gameLabel="NEW"
+    gameType="DIGITAL | PS5"
+    gamePrice="R$ 320,99"
+  ></app-card>
 </div>
